--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "canvas-gauges": "^2.1.5",
     "express": "^4.16.4",
     "math.js": "^1.1.43",
+    "mysql": "^2.16.0",
     "opn": "^5.4.0",
     "prompt": "^1.0.0",
+    "requirejs": "^2.3.6",
     "serialport": "^7.0.2"
   }
 }
