--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "microtime": "^3.0.0",
     "mysql": "^2.16.0",
     "opn": "^5.4.0",
+    "plotly": "^1.0.6",
     "prompt": "^1.0.0",
     "requirejs": "^2.3.6",
     "serialport": "^7.1.4"
